--- a/pages/login.html
+++ b/pages/login.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <script src="login.js"></script>
     <div class="main">
       <div class="container">
         <div class="login_container">
